# DEMO

./: .gitignore  CompanyDataset2.csv  app.py  authentication.py  clean_linkedin_data.py  dummy_market_mapping.py  examine.xlsx  gpt.py  large_realistic_companies.csv  mock.json  mock_data.csv  mongo_db.py  pyproject.toml  realistic_companies.csv  search.py  user_history.db  user_history.py
.streamlit/: secrets.toml
analytics/: google_analytics.py  hotjar_component.py
cleanup_scripts/: linkedIn_urls.py
pages/: results.py
